@@ -71,6 +71,7 @@ export(makeTreeSummarizedExperimentFromBiom)
 export(makeTreeSummarizedExperimentFromDADA2)
 export(makeTreeSummarizedExperimentFromPhyloseq)
 export(meltAssay)
+export(meltSE)
 export(mergeCols)
 export(mergeFeatures)
 export(mergeFeaturesByPrevalence)
@@ -174,6 +175,7 @@ exportMethods(makePhyloseqFromTreeSummarizedExperiment)
 exportMethods(makeTreeSummarizedExperimentFromPhyloseq)
 exportMethods(mapTaxonomy)
 exportMethods(meltAssay)
+exportMethods(meltSE)
 exportMethods(mergeCols)
 exportMethods(mergeFeatures)
 exportMethods(mergeFeaturesByPrevalence)
