@@ -1,12 +1,12 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/meltAssay.R
-\name{meltAssay}
-\alias{meltAssay}
-\alias{meltAssay,SummarizedExperiment-method}
+\name{meltSE}
+\alias{meltSE}
+\alias{meltSE,SummarizedExperiment-method}
 \title{Converting a \code{\link[SummarizedExperiment:SummarizedExperiment-class]{SummarizedExperiment}}
 object into a long data.frame}
 \usage{
-meltAssay(
+meltSE(
   x,
   assay.type = assay_name,
   assay_name = "counts",
@@ -17,7 +17,7 @@ meltAssay(
   ...
 )
 
-\S4method{meltAssay}{SummarizedExperiment}(
+\S4method{meltSE}{SummarizedExperiment}(
   x,
   assay.type = assay_name,
   assay_name = "counts",
@@ -77,7 +77,7 @@ column \dQuote{FeatureID} will contain the rownames, if set, and analogously
 a column \dQuote{SampleID} with the colnames, if set
 }
 \description{
-\code{meltAssay} Converts a
+\code{meltSE} Converts a
 \code{\link[SummarizedExperiment:SummarizedExperiment-class]{SummarizedExperiment}} object into a
 long data.frame which can be used for \code{tidyverse}-tools.
 }
@@ -89,7 +89,7 @@ names are set.
 }
 \examples{
 data(GlobalPatterns)
-molten_tse <- meltAssay(GlobalPatterns,
+molten_tse <- meltSE(GlobalPatterns,
                         assay.type = "counts",
                         add_row_data = TRUE,
                         add_col_data = TRUE
