@@ -1,5 +1,5 @@
-context("meltAssay")
-test_that("meltAssay", {
+context("meltSE")
+test_that("meltSE", {
     # .norm_add_row_data .norm_add_col_data
     expect_error(mia:::.norm_add_row_data(),
                  'argument "add_row_data" is missing')
@@ -33,15 +33,15 @@ test_that("meltAssay", {
     #
 
     se <- GlobalPatterns
-    molten_assay <- meltAssay(se,
-                              add_row_data = TRUE,
-                              add_col_data = c("X.SampleID", "Primer"),
-                              assay.type = "counts")
+    molten_assay <- meltSE(se,
+                            add_row_data = TRUE,
+                            add_col_data = c("X.SampleID", "Primer"),
+                            assay.type = "counts")
     expect_s3_class(molten_assay, c("tbl_df","tbl","data.frame"))
     expect_equal(colnames(molten_assay)[c(1:4,11)], c("FeatureID","SampleID","counts","Kingdom","X.SampleID"))
     expect_equal(is.numeric(molten_assay$counts), TRUE)
 
-    only_assay <- meltAssay(se, assay.type = "counts")
+    only_assay <- meltSE(se, assay.type = "counts")
     expect_equal(colnames(only_assay)[1:3], c("FeatureID","SampleID","counts"))
     expect_equal(is.numeric(only_assay$counts), TRUE)
 
@@ -61,8 +61,8 @@ test_that("meltAssay", {
     expect_equal(colnames(molten_assay)[c(1:4,11)], c("FeatureID","SampleID","counts","Kingdom","X.SampleID"))
     expect_equal(is.numeric(assay_taxa_coldata$counts), TRUE)
     #
-    actual <- meltAssay(x, add_row_data = TRUE, add_col_data = TRUE)
-    expect_warning(actual2 <- meltAssay(x2, add_row_data = TRUE, add_col_data = TRUE))
+    actual <- meltSE(x, add_row_data = TRUE, add_col_data = TRUE)
+    expect_warning(actual2 <- meltSE(x2, add_row_data = TRUE, add_col_data = TRUE))
     expect_false("FeatureID_row" %in% colnames(actual))
     expect_true("FeatureID_row" %in% colnames(actual2))
     expect_false("SampleID_col" %in% colnames(actual))
@@ -70,15 +70,15 @@ test_that("meltAssay", {
     x3 <- x2
     rownames(x3) <- NULL
     colnames(x3) <- NULL
-    actual3 <- meltAssay(x3, add_row_data = TRUE, add_col_data = TRUE)
+    actual3 <- meltSE(x3, add_row_data = TRUE, add_col_data = TRUE)
     expect_false("FeatureID_row" %in% colnames(actual))
     expect_false("SampleID_col" %in% colnames(actual))
     #
     x4 <- se
     # Change names to 1, 2, 3... format
     colnames(x4) <- seq_along(colnames(x4))
-    melted <- meltAssay(x4, assay.type = "counts", add_col_data = TRUE)
-    melted2 <- meltAssay(x4, assay.type = "counts", add_col_data = TRUE, 
+    melted <- meltSE(x4, assay.type = "counts", add_col_data = TRUE)
+    melted2 <- meltSE(x4, assay.type = "counts", add_col_data = TRUE, 
                          check_names = TRUE)
     # There should not be any NAs
     expect_true(any(!(is.na(melted))))
