@@ -120,3 +120,4 @@ Changes in version 1.13.x
 + agglomerateByRank: bugfix related to agglomeration of non-existing tree
 + getHierarchyTree: bugfix related to empty cells in rowData
 + agglomerateByRank: bugfix: trees was not pruned correctly
++ rename meltAssay to meltSE
